src/Parser/cool.output

Terminals unused in grammar

    GE
    ERROR


State 1 conflicts: 3 reduce/reduce
State 113 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error ';'
    5           | error

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'
    8      | error

    9 optional_feature_list: %empty
   10                      | feature_list

   11 feature_list: feature ';'
   12             | feature_list feature ';'
   13             | feature_list error ';'
   14             | error

   15 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   16        | declaration

   17 formal_list: %empty
   18            | formal
   19            | formal_list ',' formal
   20            | formal_list ',' error

   21 formal: OBJECTID ':' TYPEID

   22 case_list: case_ ';'
   23          | case_list case_ ';'
   24          | case_list error ';'

   25 case_: OBJECTID ':' TYPEID DARROW expression ';'

   26 declaration_list: declaration
   27                 | declaration_list ',' declaration
   28                 | declaration_list ',' error
   29                 | error

   30 declaration: OBJECTID ':' TYPEID
   31            | OBJECTID ':' TYPEID ASSIGN expression

   32 expression_block: expression ';'
   33                 | expression_block expression ';'
   34                 | expression_block error ';'
   35                 | error

   36 expression_list: expression
   37                | expression_list ',' expression
   38                | expression_list ',' error
   39                | %empty
   40                | error

   41 expression: OBJECTID ASSIGN expression ';'
   42           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   43           | expression '.' OBJECTID '(' expression_list ')'
   44           | OBJECTID '(' expression_list ')'
   45           | IF expression THEN expression ELSE expression FI
   46           | WHILE expression LOOP expression POOL
   47           | '{' expression_block '}'
   48           | LET declaration_list IN expression
   49           | CASE expression OF case_list ESAC
   50           | NEW TYPEID
   51           | ISVOID expression
   52           | expression '+' expression
   53           | expression '-' expression
   54           | expression '*' expression
   55           | expression '/' expression
   56           | '~' expression
   57           | expression '<' expression
   58           | expression LE expression
   59           | expression '=' expression
   60           | NOT expression
   61           | '(' expression ')'
   62           | OBJECTID
   63           | INT_CONST
   64           | STR_CONST
   65           | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 42 43 44 61
    ')' (41) 15 42 43 44 61
    '*' (42) 54
    '+' (43) 52
    ',' (44) 19 20 27 28 37 38
    '-' (45) 53
    '.' (46) 42 43
    '/' (47) 55
    ':' (58) 15 21 25 30 31
    ';' (59) 4 6 7 11 12 13 22 23 24 25 32 33 34 41
    '<' (60) 57
    '=' (61) 59
    '@' (64) 42
    '{' (123) 6 7 15 47
    '}' (125) 6 7 15 47
    '~' (126) 56
    error (256) 4 5 8 13 14 20 24 28 29 34 35 38 40
    CLASS (258) 6 7
    ELSE (259) 45
    FI (260) 45
    IF (261) 45
    IN (262) 48
    INHERITS (263) 7
    LET (264) 48
    LOOP (265) 46
    POOL (266) 46
    THEN (267) 45
    WHILE (268) 46
    CASE (269) 49
    ESAC (270) 49
    OF (271) 49
    DARROW (272) 25
    NEW (273) 50
    ISVOID (274) 51
    STR_CONST <symbol> (275) 64
    INT_CONST <symbol> (276) 63
    BOOL_CONST <boolean> (277) 65
    TYPEID <symbol> (278) 6 7 15 21 25 30 31 42 50
    OBJECTID <symbol> (279) 15 21 25 30 31 41 42 43 44 62
    ASSIGN (280) 31 41
    NOT (281) 60
    LE (282) 58
    ERROR (283)
    GE (286)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3 4 5
        on right: 1 3 4
    class <class_> (49)
        on left: 6 7 8
        on right: 2 3
    optional_feature_list <features> (50)
        on left: 9 10
        on right: 6 7
    feature_list <features> (51)
        on left: 11 12 13 14
        on right: 10 12 13
    feature <feature> (52)
        on left: 15 16
        on right: 11 12
    formal_list <formals> (53)
        on left: 17 18 19 20
        on right: 15 19 20
    formal <formal> (54)
        on left: 21
        on right: 18 19
    case_list <cases> (55)
        on left: 22 23 24
        on right: 23 24 49
    case_ <case_> (56)
        on left: 25
        on right: 22 23
    declaration_list <features> (57)
        on left: 26 27 28 29
        on right: 27 28 48
    declaration <feature> (58)
        on left: 30 31
        on right: 16 26 27
    expression_block <expressions> (59)
        on left: 32 33 34 35
        on right: 33 34 47
    expression_list <expressions> (60)
        on left: 36 37 38 39 40
        on right: 37 38 42 43 44
    expression <expression> (61)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 15 25 31 32 33 36 37 41 42 43 45 46 48 49 51 52 53 54 55 56 57 58 59 60 61


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    5 class_list: error .
    8 class: error .

    $end      reduce using rule 5 (class_list)
    $end      [reduce using rule 8 (class)]
    error     reduce using rule 5 (class_list)
    error     [reduce using rule 8 (class)]
    CLASS     reduce using rule 5 (class_list)
    CLASS     [reduce using rule 8 (class)]
    $default  reduce using rule 5 (class_list)


State 2

    6 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class
    4           | class_list . error ';'

    error  shift, and go to state 8
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    4 class_list: class_list error . ';'
    8 class: error .

    ';'  shift, and go to state 12

    $default  reduce using rule 8 (class)


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    7 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    6 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 16
    feature_list           go to state 17
    feature                go to state 18
    declaration            go to state 19


State 12

    4 class_list: class_list error ';' .

    $default  reduce using rule 4 (class_list)


State 13

    7 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 20


State 14

   14 feature_list: error .

    $default  reduce using rule 14 (feature_list)


State 15

   15 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   30 declaration: OBJECTID . ':' TYPEID
   31            | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 16

    6 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 23


State 17

   10 optional_feature_list: feature_list .
   12 feature_list: feature_list . feature ';'
   13             | feature_list . error ';'

    error     shift, and go to state 24
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 10 (optional_feature_list)

    feature      go to state 25
    declaration  go to state 19


State 18

   11 feature_list: feature . ';'

    ';'  shift, and go to state 26


State 19

   16 feature: declaration .

    $default  reduce using rule 16 (feature)


State 20

    7 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    '}'  reduce using rule 9 (optional_feature_list)

    optional_feature_list  go to state 27
    feature_list           go to state 17
    feature                go to state 18
    declaration            go to state 19


State 21

   15 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


State 22

   30 declaration: OBJECTID ':' . TYPEID
   31            | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 31


State 23

    6 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 32


State 24

   13 feature_list: feature_list error . ';'

    ';'  shift, and go to state 33


State 25

   12 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 34


State 26

   11 feature_list: feature ';' .

    $default  reduce using rule 11 (feature_list)


State 27

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 35


State 28

   21 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 36


State 29

   15 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   19 formal_list: formal_list . ',' formal
   20            | formal_list . ',' error

    ')'  shift, and go to state 37
    ','  shift, and go to state 38


State 30

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


State 31

   30 declaration: OBJECTID ':' TYPEID .
   31            | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 39

    $default  reduce using rule 30 (declaration)


State 32

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 33

   13 feature_list: feature_list error ';' .

    $default  reduce using rule 13 (feature_list)


State 34

   12 feature_list: feature_list feature ';' .

    $default  reduce using rule 12 (feature_list)


State 35

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 40


State 36

   21 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 41


State 37

   15 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 42


State 38

   19 formal_list: formal_list ',' . formal
   20            | formal_list ',' . error

    error     shift, and go to state 43
    OBJECTID  shift, and go to state 28

    formal  go to state 44


State 39

   31 declaration: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 59


State 40

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 41

   21 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 21 (formal)


State 42

   15 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 60


State 43

   20 formal_list: formal_list ',' error .

    $default  reduce using rule 20 (formal_list)


State 44

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


State 45

   45 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 61


State 46

   48 expression: LET . declaration_list IN expression

    error     shift, and go to state 62
    OBJECTID  shift, and go to state 63

    declaration_list  go to state 64
    declaration       go to state 65


State 47

   46 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 66


State 48

   49 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 67


State 49

   50 expression: NEW . TYPEID

    TYPEID  shift, and go to state 68


State 50

   51 expression: ISVOID . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 69


State 51

   64 expression: STR_CONST .

    $default  reduce using rule 64 (expression)


State 52

   63 expression: INT_CONST .

    $default  reduce using rule 63 (expression)


State 53

   65 expression: BOOL_CONST .

    $default  reduce using rule 65 (expression)


State 54

   41 expression: OBJECTID . ASSIGN expression ';'
   44           | OBJECTID . '(' expression_list ')'
   62           | OBJECTID .

    ASSIGN  shift, and go to state 70
    '('     shift, and go to state 71

    $default  reduce using rule 62 (expression)


State 55

   60 expression: NOT . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 72


State 56

   56 expression: '~' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 73


State 57

   47 expression: '{' . expression_block '}'

    error       shift, and go to state 74
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression_block  go to state 75
    expression        go to state 76


State 58

   61 expression: '(' . expression ')'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 77


State 59

   31 declaration: OBJECTID ':' TYPEID ASSIGN expression .
   42 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   43           | expression . '.' OBJECTID '(' expression_list ')'
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   57           | expression . '<' expression
   58           | expression . LE expression
   59           | expression . '=' expression

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 31 (declaration)


State 60

   15 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 87


State 61

   42 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   43           | expression . '.' OBJECTID '(' expression_list ')'
   45           | IF expression . THEN expression ELSE expression FI
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   57           | expression . '<' expression
   58           | expression . LE expression
   59           | expression . '=' expression

    THEN  shift, and go to state 88
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 62

   29 declaration_list: error .

    $default  reduce using rule 29 (declaration_list)


State 63

   30 declaration: OBJECTID . ':' TYPEID
   31            | OBJECTID . ':' TYPEID ASSIGN expression

    ':'  shift, and go to state 22


State 64

   27 declaration_list: declaration_list . ',' declaration
   28                 | declaration_list . ',' error
   48 expression: LET declaration_list . IN expression

    IN   shift, and go to state 89
    ','  shift, and go to state 90


State 65

   26 declaration_list: declaration .

    $default  reduce using rule 26 (declaration_list)


State 66

   42 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   43           | expression . '.' OBJECTID '(' expression_list ')'
   46           | WHILE expression . LOOP expression POOL
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   57           | expression . '<' expression
   58           | expression . LE expression
   59           | expression . '=' expression

    LOOP  shift, and go to state 91
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 67

   42 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   43           | expression . '.' OBJECTID '(' expression_list ')'
   49           | CASE expression . OF case_list ESAC
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   57           | expression . '<' expression
   58           | expression . LE expression
   59           | expression . '=' expression

    OF   shift, and go to state 92
    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86


State 68

   50 expression: NEW TYPEID .

    $default  reduce using rule 50 (expression)


State 69

   42 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   43           | expression . '.' OBJECTID '(' expression_list ')'
   51           | ISVOID expression .
   52           | expression . '+' expression
   53           | expression . '-' expression
   54           | expression . '*' expression
   55           | expression . '/' expression
   57           | expression . '<' expression
   58           | expression . LE expression
   59           | expression . '=' expression

    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 51 (expression)


State 70
